@@ -1,3 +1,9 @@
+2012-05-30  Andrew John Hughes  <ahughes@redhat.com>
+
+	* Makefile.am:
+	(EXTRA_DIST): Add test/tapset.
+	(clean-jtreg): Remove test/jtreg if empty.
+
 2012-08-06  Mark Wielaard  <mjw@redhat.com>
 
 	* test/tapset/jstaptest.pl (probestrings): Expect non-zero value
